--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
-/*Votre Code ICI*/
-
-/*FIN du code*/
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f0f0f0;
+    font-family: Arial, sans-serif;
+}
+.container{
+    display: flex;
+    grid-template-columns: repeat(41fr);
+    flex-wrap: wrap;
+    gap: 20px;
+    max-width: 900px;
+}
+.photo-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: calc(25% - 20px);
+    margin-bottom: 20px;
+}
+.photo{
+    width: 100%;
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+.text p{
+    margin: 2px 0;
+    text-align: center;
+    font-size: 14px;
+    color: #345;
+}
