--- a/style.css
+++ b/style.css
@@ -1,3 +1,52 @@
-/*Votre Code ICI*/
+body{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background: rgb(248, 249, 253);
+}
+.banner{
+    width: 80%;
+    height: 65%;
+    display: flex;
+    top: 90px;
+    left: 130px;
+    position: absolute;  
+    background: #fff;
+}
+.app-text{
+    width: 50%;
+    padding: 20px;
 
-/*FIN du code*/
+}
+.app-text h1{
+    font-size: 30px;
+    width: 250px;
+    position: relative;
+    margin-left: 40px;
+    color: black;
+    padding-top: 40px;
+}
+.app-text p{
+    font-size: 15px;
+    width: 250px;
+    margin: 40px  0px 30px 40px;
+    line-height: 15px;
+    color: #919191;
+}
+.app-text small b{
+    text-decoration: underline;
+    color: black;
+    margin-left: 40px;
+    display: inline-flex;
+    text-align: center;
+    width: 50%;
+    height: 50px;
+    margin-top: 45px;
+    font-size: 15px;
+}
+.app-picture{
+    width: 100%;
+    margin-top: 0px;
+    font-size: 15px;
+    padding-left: 0px;
+}
