--- a/style.css
+++ b/style.css
@@ -5,12 +5,17 @@
     flex-wrap: wrap;
 }
 .item {
-    text-align: center;
+    text-align: start;
     margin: 10px;
+    margin-bottom: 3px;
+}
+.item p{
+    margin-bottom: 3px;
+    margin-top: 3px;
 }
 .item img {
-    max-width: 200px;
-    max-height: 200px;
+    max-width: 260px;
+    max-height: 1200px;
 }
 .text {
     margin-top: 5px;
