--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-    margin:0px;
-    padding:0px;
+    max-width: 1200px;
+    margin:auto;
 }
 header {
     display:flex;
@@ -8,20 +8,17 @@ header {
     border:1px solid black;
     align-items: center;
     height: 5em;
-    margin:0 1em;
 }
 #navbar{
-    /*border:1px solid black;*/
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     width:85%;
 }
-/*subtitute the calc to its normal width*/
 #logo{
-    width:10%;
-    border:1px solid black;
-    margin-right:1.5em;
+    width:15%;
+    padding-right:1.5em;
+    box-sizing: border-box;
 }
 #navbar ul{
     padding:0px;
@@ -66,13 +63,15 @@ header {
 }
 #menu-1 a,#menu-1 select{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:1.1em;
+    font-size:0.9em;
+    text-shadow: 0px 0px 1px black;
     color:rgb(60, 60, 60);
     margin-right:1.25em;
     border:none;
 }
 #menu-1 a:hover,#menu-1 select:hover{
     cursor:pointer;
+    text-shadow: 0px 0px 5px rgb(80, 80, 80);
 }
 #menu-1 a:hover{
     border-bottom:1px solid rgb(60, 60, 60)
@@ -80,7 +79,7 @@ header {
 #menu-2{
     display: flex;
     flex-wrap:wrap;
-    font-size: 1.1em;
+    font-size: 1em;
 }
 #search{
     display: flex;
@@ -107,6 +106,73 @@ header {
     top:-1em;
     left:-1em;
 }
+
+/*Section-2 Anjara */
+#section-2{
+    margin-top:25px;
+    display:flex;
+    flex-wrap:wrap;
+    width:100%;
+    height:100vh;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:rgb(80, 80, 80)
+}
+.section-2-content{
+    padding-left:2em;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.section-2-content h4{
+    color:rgb(30, 30, 30);
+    font-size:1.3em;
+    padding: 15px 0px 10px;
+    margin:0px;
+}
+.section-2-content p{
+    font-size:1.075em;
+    padding:0px;
+    margin: 0px;
+}
+.section-2-content a{
+    color:rgb(30, 30, 30);
+    margin-bottom:3em;
+    font-size:1em;
+    text-shadow: 0px 0px 1px rgb(60, 60, 60);
+    padding-bottom: 0.15em;
+    border-bottom:1px solid rgb(30, 30, 30);
+    margin-right:auto;
+    text-decoration: none;
+}
+#section-2-left{
+    width:50%;
+    background-image: url(Image/bag.JPG);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+#section-2-right{
+    width:50%;
+    padding-left: 10px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+#section-2-right-top{
+    background-image: url(Image/people-top.JPG);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 50%;
+}
+#section-2-right-bottom{
+    background-image: url(Image/people-bottom.JPG);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 50%;
+}
+
+/*Responsive*/
 @media screen and (max-width:800px){
     header{
         justify-content: space-between;
