--- a/style.css
+++ b/style.css
@@ -305,6 +305,91 @@ header {
 }
 /*END estcraft's Code*/
 
+/*Mialy's Code Footer*/
+#information{
+    margin-top:75px;
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+    color: grey;
+}
+.information-1{
+    width: 20%;
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+}
+.information-1 p{
+    text-align: center;
+    font-size: 1em;
+}
+footer{
+    display: flex;
+    justify-content: space-around;
+    color: grey;
+    margin-top:50px;
+}
+footer div{
+    width: 25%;
+    font-size:0.9em;
+}
+footer div h3{
+    color:rgb(40, 40, 40);
+    font-size: 1em;
+    margin-bottom: 35px;
+}
+footer div p{
+    padding: 0px;
+    margin-bottom: 1px;
+}
+#contact{
+    display: flex;
+    padding: 1px;
+    border:1px solid rgb(140, 140, 140);
+    width:100%;
+    height: 15%;
+    margin-top:40px;
+}
+#contact input{
+    border:none;
+    width:80%;
+}
+#contact button{
+    width:19%;
+    border:none;
+    background-color: white;
+    color:rgb(20, 20, 20);
+    font-weight: 700;
+}
+#contact button:hover{
+    background-color: rgb(220, 220, 220);
+}
+#icons{
+    display: flex;
+    margin-top:40px;
+    font-size: 1.5em;
+    color: rgb(180, 180, 180);
+}
+#icons i{
+    margin-right:15px;
+}
+#farany {
+    display: flex;
+    justify-content: space-between;
+    color: rgb(140, 140, 140);
+    font-size:0.9em;
+    margin-bottom: 10px;
+}
+#farany span a{
+    text-decoration: none;
+    color: rgb(140, 140, 140);
+    margin-left:10px;
+}
+#farany span a:hover{
+    border-bottom: 1px solid rgb(140, 140, 140);
+}
+/*END Mialy's Code*/
+
 /*Responsive*/
 @media screen and (max-width:800px){
     /*Anjara's Above and Navbar*/
